# fiber

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt  flake.nix  hk.pkl  justfile
.github/workflows/: extended.yml  quality.yml
apps/fiber/: main.cpp
benchmarks/: fiber_benchmark.cpp
cmake/: check-clangd.sh
conan/profiles/: llvm
docs/: README.md  architecture.md  ci.md  performance.md  protocol.md  single-pane-runtime.md
include/fiber/: assert.hpp  bounded_byte_queue.hpp  config.hpp  fiber.hpp  id.hpp  limits.hpp
include/fiber/mux/: single_pane.hpp
include/fiber/terminal/: terminal.hpp
include/fiber/vt/: terminal.hpp
scripts/ci/: benchmarks  changes.py  configure  cpp  platform  sanitizers  submodule-build-test  workflows
src/: assert.cpp  config.cpp  fiber.cpp  main.cpp
src/app/: README.md  application.cpp  application.hpp
src/client/: README.md  attached_client.cpp  attached_client.hpp
src/core/: README.md  engine.cpp  engine.hpp  fiber.cpp  input.cpp  input.hpp
src/daemon/: README.md  server.cpp  server.hpp  session.cpp  session.hpp
src/extension/: README.md
src/mux/: single_pane.cpp
src/platform/: README.md  io.cpp  io.hpp  pty.cpp  pty.hpp  terminal_mode.cpp  terminal_mode.hpp
src/protocol/: README.md  single_pane.cpp  single_pane.hpp
src/render/: README.md  pane_composition.cpp  pane_composition.hpp  single_pane.cpp  single_pane.hpp
src/terminal/: README.md  terminal.cpp
src/vt/: terminal.cpp
tests/: config_test.cpp  core_input_test.cpp  core_test.cpp  fiber_test.cpp  platform_test.cpp  protocol_test.cpp  render_composition_test.cpp  terminal_test.cpp
tools/: test_ci_changes.py
